Fix text alignment

--- a/News/static/news/style.css
+++ b/News/static/news/style.css
@@ -13,6 +13,7 @@ body {
 
 .article p {
     font-size: 1.2rem;
+    text-align: justify;
 }
 
 .container {
